[package]
name = "stereo-unity-gain"
version = "0.1.0"
edition = "2024"
authors = ["Dave White"]
description = "A tool set your audio inputs and outputs to unity gain in stereo."
license = "Apache-2.0"
build = "build.rs"


[profile.release]
strip = true

[dependencies]
slint = "1.11.0"
slint-build = "1.11.0"

[build-dependencies]
slint-build = "1.11.0"
