[package]
name = "stereo-unity-gain"
version = "0.4.1"
edition = "2024"
authors = ["Dave White"]
description = "A tool set your audio inputs and outputs to unity gain in stereo."
license = "Apache-2.0"
build = "build.rs"


[profile.release]
strip = true

[dependencies]
cpal = "0.15.3"
crossbeam-channel = "0.5.15"
slint = "1.11.0"
slint-build = "1.11.0"
thiserror = "2.0.12"

[build-dependencies]
slint-build = "1.11.0"
