[package]
name = "stereo-unity-gain"
version = "0.6.1"
edition = "2024"
authors = ["Dave White"]
description = "A simple app with big easy to see from across room level meters to help you set your audio interfaces input gain to unity and balance stereo pairs"
license = "Apache-2.0"
build = "build.rs"


[profile.release]
strip = true
lto = true

[dependencies]
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
rtrb = "0.3.2"
slint = "1.11.0"
slint-build = "1.11.0"
thiserror = "2.0.12"

[build-dependencies]
slint-build = "1.12.0"
